[package]
name = "tryphon_macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for the tryphon configuration library"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tryphon_macros"
keywords = ["macro", "derive", "config", "environment", "env"]
categories = ["config", "development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.41"
syn = { version = "2.0.108", features = ["fold", "full", "extra-traits"] }
proc-macro2 = "1.0.101"

[dev-dependencies]
trybuild = "1.0"
tryphon = { path = "../tryphon" }
